# docs/swagger.yaml
@@ -1,10 +1,8 @@
 definitions:
-  domain.Odontologo:
+  dto.Odontologo:
     properties:
       apellido:
         type: string
-      id:
-        type: integer
       matricula:
         type: string
       nombre:
@@ -13,69 +11,6 @@ definitions:
     - apellido
     - matricula
     - nombre
-    type: object
-  domain.Paciente:
-    properties:
-      apellido:
-        type: string
-      dni:
-        type: string
-      domicilio:
-        type: string
-      fecha_alta:
-        type: string
-      id:
-        type: integer
-      nombre:
-        type: string
-    required:
-    - apellido
-    - dni
-    - domicilio
-    - fecha_alta
-    - nombre
-    type: object
-  domain.Turno:
-    properties:
-      descripcion:
-        type: string
-      fecha:
-        type: string
-      hora:
-        type: string
-      id:
-        type: integer
-      id_odontologo:
-        type: integer
-      id_paciente:
-        type: integer
-    required:
-    - descripcion
-    - fecha
-    - hora
-    - id_odontologo
-    - id_paciente
-    type: object
-  domain.TurnoAux:
-    properties:
-      descripcion:
-        type: string
-      dni_paciente:
-        type: string
-      fecha:
-        type: string
-      hora:
-        type: string
-      id:
-        type: integer
-      matricula_odontologo:
-        type: string
-    required:
-    - descripcion
-    - dni_paciente
-    - fecha
-    - hora
-    - matricula_odontologo
     type: object
   web.errorResponse:
     properties:
@@ -117,7 +52,7 @@ paths:
         name: body
         required: true
         schema:
-          $ref: '#/definitions/domain.Odontologo'
+          $ref: '#/definitions/dto.Odontologo'
       produces:
       - application/json
       responses:
@@ -131,7 +66,7 @@ paths:
             $ref: '#/definitions/web.errorResponse'
       summary: POST odontologo
       tags:
-      - domain.Odontologo
+      - Odontologo
   /odontologos/:id:
     delete:
       description: Elimina un odontólogo por su ID
@@ -163,8 +98,10 @@ paths:
             $ref: '#/definitions/web.errorResponse'
       summary: DELETE odontologo by ID
       tags:
-      - domain.Odontologo
+      - Odontologo
     get:
+      consumes:
+      - application/json
       description: Obtiene un odontólogo por su ID
       parameters:
       - description: Odontologo Id
@@ -189,7 +126,7 @@ paths:
             $ref: '#/definitions/web.errorResponse'
       summary: GET odontologo by ID
       tags:
-      - domain.Odontologo
+      - Odontologo
     patch:
       description: Actualizar parcialmente un odontólogo por su ID
       parameters:
@@ -203,7 +140,7 @@ paths:
         name: body
         required: true
         schema:
-          $ref: '#/definitions/domain.Odontologo'
+          $ref: '#/definitions/dto.Odontologo'
       - description: Odontologo Id
         in: path
         name: id
@@ -230,8 +167,10 @@ paths:
             $ref: '#/definitions/web.errorResponse'
       summary: PATCH odontologo by ID
       tags:
-      - domain.Odontologo
+      - Odontologo
     put:
+      consumes:
+      - application/json
       description: Actualiza un odontologo por su ID
       parameters:
       - description: token
@@ -244,7 +183,7 @@ paths:
         name: body
         required: true
         schema:
-          $ref: '#/definitions/domain.Odontologo'
+          $ref: '#/definitions/dto.Odontologo'
       - description: Odontologo Id
         in: path
         name: id
@@ -271,395 +210,5 @@ paths:
             $ref: '#/definitions/web.errorResponse'
       summary: PUT odontologo by ID
       tags:
-      - domain.Odontologo
-  /pacientes:
-    post:
-      description: Crea un nuevo paciente
-      parameters:
-      - description: token
-        in: header
-        name: token
-        required: true
-        type: string
-      - description: Paciente
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/domain.Paciente'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/web.response'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/web.errorResponse'
-      summary: POST paciente
-      tags:
-      - domain.Paciente
-  /pacientes/:id:
-    delete:
-      description: Elimina un paciente por su ID
-      parameters:
-      - description: token
-        in: header
-        name: token
-        required: true
-        type: string
-      - description: Odontologo Id
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/web.response'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/web.errorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/web.errorResponse'
-      summary: DELETE paciente by ID
-      tags:
-      - domain.Paciente
-    get:
-      description: Obtiene un paciente por su ID
-      parameters:
-      - description: Paciente Id
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/web.response'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/web.errorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/web.errorResponse'
-      summary: GET paciente by ID
-      tags:
-      - domain.Paciente
-    patch:
-      description: Actualizar parcialmente un paciente por su ID
-      parameters:
-      - description: token
-        in: header
-        name: token
-        required: true
-        type: string
-      - description: Paciente
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/domain.Paciente'
-      - description: Paciente Id
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/web.response'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/web.errorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/web.errorResponse'
-        "409":
-          description: Conflict
-          schema:
-            $ref: '#/definitions/web.errorResponse'
-      summary: PATCH paciente by ID
-      tags:
-      - domain.Paciente
-    put:
-      description: Actualiza un paciente por su ID
-      parameters:
-      - description: token
-        in: header
-        name: token
-        required: true
-        type: string
-      - description: Paciente
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/domain.Paciente'
-      - description: Odontologo Id
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/web.response'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/web.errorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/web.errorResponse'
-        "409":
-          description: Conflict
-          schema:
-            $ref: '#/definitions/web.errorResponse'
-      summary: PUT paciente by ID
-      tags:
-      - domain.Paciente
-  /turnos:
-    get:
-      description: Obtiene una lista de turnos por DNI
-      parameters:
-      - description: Turno Dni
-        in: query
-        name: dni
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/web.response'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/web.errorResponse'
-      summary: GET turnos by DNI
-      tags:
-      - domain.Turno
-    post:
-      description: Crea un nuevo turno con el ID del paciente y el ID del odontólogo
-      parameters:
-      - description: token
-        in: header
-        name: token
-        required: true
-        type: string
-      - description: Turno
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/domain.Turno'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/web.response'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/web.errorResponse'
-      summary: POST turno
-      tags:
-      - domain.Turno
-  /turnos/:id:
-    delete:
-      description: Elimina un turno por su ID
-      parameters:
-      - description: token
-        in: header
-        name: token
-        required: true
-        type: string
-      - description: Turno Id
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/web.response'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/web.errorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/web.errorResponse'
-      summary: DELETE turno by ID
-      tags:
-      - domain.Turno
-    get:
-      description: Obtiene un turno por su ID
-      parameters:
-      - description: Turno Id
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/web.response'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/web.errorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/web.errorResponse'
-      summary: GET turno by ID
-      tags:
-      - domain.Turno
-    patch:
-      description: Actualizar parcialmente un turno por su ID
-      parameters:
-      - description: token
-        in: header
-        name: token
-        required: true
-        type: string
-      - description: Turno
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/domain.Turno'
-      - description: Turno Id
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/web.response'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/web.errorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/web.errorResponse'
-        "409":
-          description: Conflict
-          schema:
-            $ref: '#/definitions/web.errorResponse'
-      summary: PATCH turno by ID
-      tags:
-      - domain.Turno
-    put:
-      description: Actualiza un turno por su ID
-      parameters:
-      - description: token
-        in: header
-        name: token
-        required: true
-        type: string
-      - description: Turno
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/domain.Turno'
-      - description: Turno Id
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/web.response'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/web.errorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/web.errorResponse'
-        "409":
-          description: Conflict
-          schema:
-            $ref: '#/definitions/web.errorResponse'
-      summary: PUT turno by ID
-      tags:
-      - domain.Turno
-  /turnos/DniMat:
-    post:
-      description: Crea un nuevo turno con el DNI del paciente y la matrícula del
-        odontólogo
-      parameters:
-      - description: token
-        in: header
-        name: token
-        required: true
-        type: string
-      - description: TurnoAux
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/domain.TurnoAux'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/web.response'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/web.errorResponse'
-      summary: POST turno con DNI y Matrícula
-      tags:
-      - domain.TurnoAux
+      - Odontologo
 swagger: "2.0"
