# internal/domain/dto/odontolgo.go
@@ -1,0 +1,9 @@
+package dto
+
+type Odontologo struct {
+
+	Apellido  string `json:"apellido" binding:"required"`
+	Nombre    string `json:"nombre" binding:"required"`
+	Matricula string `json:"matricula" binding:"required"`
+	
+}
